--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="numbers">
             <div>
               <h3>10k+</h3>
-              <h6>COMPANIES</h6>
+              <h6>COMPANIESs</h6>
             </div>
             <div>
               <h3>314</h3>
