--- a/index.html
+++ b/index.html
@@ -48,3 +48,100 @@
     </main>
   </body>
 </html>
+
+
+
+
+
+
+
+
+<div class="numbers">
+  <div>
+    <h3>10k+</h3>
+    <h6>COMPANIESss</h6>
+  </div>
+  <div>
+    <h3>314</h3>
+    <h4>TEMPLATES</h4>
+  </div>
+  <div>
+    <h3>12M+</h3>
+    <h4>QUERIES</h4>
+  </div>
+</div>
+</div>
+<div class="second-section"></div>
+</div>
+</main>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="numbers">
+  <div>
+    <h3>10k+</h3>
+    <h6>COMPANIESss</h6>
+  </div>
+  <div>
+    <h3>314</h3>
+    <h4>TEMPLATES</h4>
+  </div>
+  <div>
+    <h3>12M+</h3>
+    <h4>QUERIES</h4>
+  </div>
+</div>
+</div>
+<div class="second-section"></div>
+</div>
+</main>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="numbers">
+  <div>
+    <h3>10k+</h3>
+    <h6>COMPANIESss</h6>
+  </div>
+  <div>
+    <h3>314</h3>
+    <h4>TEMPLATES</h4>
+  </div>
+  <div>
+    <h3>12M+</h3>
+    <h4>QUERIES</h4>
+  </div>
+</div>
+</div>
+<div class="second-section"></div>
+</div>
+</main>
+</body>
+</html>
